<resources>
    <string name="app_name">praktikum9</string>
    <string name="name">Nama</string>
    <string name="email">Email</string>
    <string name="phone">Phone Number</string>
    <string name="age">Umur</string>
    <string name="tv_theme">Theme Mode</string>
    <string name="setting">SETTING</string>
    <string name="light_theme">Tema Terang</string>
    <string name="dark_theme">Tema Gelap</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="save">SIMPAN</string>
    <string name="main_title">Dashboard</string>
    <string name="setting_page">Setting</string>
    <string name="field_required">Kolom Tidak Boleh Kosong</string>
    <string name="email_is_not_valid">Email Tidak Valid</string>
    <string name="field_digit_only">Kolom Hanya untuk Angka</string>
    <string name="default_name">No Name</string>
    <string name="default_email">No Email</string>
    <string name="default_phone">No Phone Number</string>
    <string name="default_alamat">No Address</string>
    <string name="default_pekerjaan">No Job</string>
    <string name="default_age">No Age</string>
    <string name="default_ttl">No Place/Date</string>
    <string name="ttl">Tempat/Tanggal Lahir</string>
    <string name="alamat">Alamat</string>
</resources>